@@ -1,3 +1,9 @@
+Tue Nov 22 12:46:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Bug_3531b_Regression/server.cpp:
+
+          Fix ST build errors.
+
 Mon Nov 21 11:59:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PortableServer/Upcall_Wrapper.h:
